<resources>
    <string name="app_name">Juggernaut Method Basic</string>

    <string name="app_bar_title_home">@string/app_name</string>
    <string name="app_bar_title_overall">Overall</string>
    <string name="app_bar_title_statistic">Statistic</string>
    <string name="app_bar_title_settings">Settings</string>

    <string name="onboarding_header_title">Juggernaut\nMethod\nBasic</string>
    <string name="onboarding_header_sub_title">Become Unstoppable</string>
    <string name="onboarding_header_start_button_text">START</string>
    <string name="onboarding_form_page_next_button_text">Next</string>
    <string name="onboarding_form_page_back_button_text">Back</string>
    <string name="onboarding_form_page_description_text">Please enter your %1$s record.\n(Click button to enter your weights record)</string>
    <string name="onboarding_form_page_plus_reps_content_description_text">This is plus reps button.</string>
    <string name="onboarding_form_page_minus_reps_content_description_text">This is minus reps button.</string>
    <string name="onboarding_form_page_quit_dialog_title_text">Are you sure you want to quit?</string>
    <string name="onboarding_form_page_quit_dialog_message_text">All progress in this session will be lost.</string>
    <string name="onboarding_form_page_quit_dialog_positive_action_text">quit</string>
    <string name="onboarding_form_page_quit_dialog_negative_action_text">cancel</string>
    <string name="onboarding_title_image_content_description">This is title image.</string>
    <string name="onboarding_lift_category_icon_content_description">This is life category icon.</string>
    <string name="onboarding_confirmation_title_text">Check !!</string>
    <string name="onboarding_confirmation_description_text">Please check the records you entered.</string>
    <string name="onboarding_weight_input_button_25">+ 25kg</string>
    <string name="onboarding_weight_input_button_20">+ 20kg</string>
    <string name="onboarding_weight_input_button_15">+ 15kg</string>
    <string name="onboarding_weight_input_button_10">+ 10kg</string>
    <string name="onboarding_weight_input_button_5">+ 5kg</string>

    <string name="onboarding_weight_input_button_2.5">+ 2.5kg</string>
    <string name="onboarding_weight_input_button_2">+ 2kg</string>
    <string name="onboarding_weight_input_button_1.5">+ 1.5kg</string>
    <string name="onboarding_weight_input_button_1">+ 1kg</string>
    <string name="onboarding_weight_input_button_0.5">+ 0.5kg</string>

    <string name="onboarding_weight_input_button_pop">POP</string>
    <string name="onboarding_weight_input_button_dismiss">DONE</string>

    <string name="onboarding_weight_input_snackbar_message_barbell_full">Full! Cannot load more plates.\nConsider realigning your plates.</string>
    <string name="onboarding_weight_input_snackbar_message_barbell_empty">It\'s empty.</string>
    <string name="onboarding_weight_input_snackbar_action_label">OK</string>

    <string name="onboarding_weight_input_weights_text_format">%1$s %2$s</string> <!-- Usage : 120 kg or 120 lbs -->
    <string name="onboarding_confirm_base_record_text_format">Your record : %1$d%3$s x %2$d</string> <!-- Usage : 120kg x 5 -->
    <string name="onboarding_confirm_start_method_button_text">Start</string>

    <string name="bottom_nav_menu_item_home_title">Home</string>
    <string name="bottom_nav_menu_item_statistic_title">Statistic</string>
    <string name="bottom_nav_menu_item_overall_title">All</string>
    <string name="accomplishment_extended_fab_navigate_back">back</string>
    <string name="home_snackbar_message">You\'ve done.\nClick start button to begin new cycle.</string>
    <string name="home_snackbar_action_label">START</string>
    <string name="home_dialog_title">Previous records are stored on this device.</string>
    <string name="home_dialog_message">You can start a new cycle based on a saved record or a new one.\n\nWhat\'s it gonna be?</string>
    <string name="home_dialog_decision_using_previous_record_label">use previous record</string>
    <string name="home_dialog_decision_start_with_new_label">start with new</string>
    <string name="home_dialog_decision_later">remind me later</string>

    <string name="overview_user_progression_title_text">Current progress</string>
    <string name="overview_user_progression_phase_title_text_format">Phase %1$d</string>
    <string name="overview_user_progression_microcycle_title_text_format">Cycle %1$d</string>
    <string name="overview_session_list_title_text">Sessions of this week</string>
    <string name="overview_user_progression_milestones_title_text">Milestones</string>
    <string name="overview_milestone_text_format">%1$d / %2$d</string> <!-- Usage :  3 / 16 -->
    <string name="overview_weekly_progress_title_text">Weekly</string>
    <string name="overview_total_progress_title_text">Total</string>
    <string name="overview_total_progress_detailed_title_text">In detail</string>
    <string name="overview_session_icon_content_description">This is liftcategory icon.</string>

    <string name="settings_halt_method_button_text">Halt current method</string>
    <string name="settings_halt_method_dialog_title_text">Are you sure?</string>
    <string name="settings_halt_method_dialog_message_text">All progress in this method will be lost permanently in device.</string>
    <string name="settings_halt_method_dialog_positive_button_text">halt</string>
    <string name="settings_halt_method_dialog_negative_button_text">cancel</string>
    <string name="settings_select_theme_title">Choose theme</string>
    <string name="settings_select_theme_system">System default</string>
    <string name="settings_select_theme_light">Light</string>
    <string name="settings_select_theme_dark">Dark</string>
    <string name="settings_select_theme_battery_saver">Battery Saver</string>


    <string name="session_phase_and_microcycle_text_format">%1$s - %2$s</string> <!-- Usage : REP10 - ACCUMULATION -->
    <string name="session_amrap_intensity_info_text_format">%1$d%2$s(%3$s%%) x %4$d+</string> <!-- Usage : 120kg(60%) x 5+ -->
    <string name="session_amrap_actual_info_text_format">AMRAP RECORD : %1$d%2$s x %3$d</string> <!-- Usage : 120kg x 8 -->

    <string name="overview_session_action_start">START</string>
    <string name="overview_session_action_done">DONE</string>

    <string name="overview_session_brief_amrap_intensity_info_text_format">%1$s%% x %2$d+</string> <!-- Usage : 60% x 5+ -->
    <string name="overview_session_brief_amrap_info_text_format">Goal : %1$d%2$s x %3$d+</string> <!-- Usage : 120kg x 5+ -->

    <string name="detail_session_progression_indicator_icon_content_description">This is progression indicator icon.</string>
    <string name="detail_session_progression_indicator_phase_title_text_format">Phase - %1$s</string>
    <string name="detail_session_progression_indicator_microcycle_title_text_format">Cycle - %1$s</string>

    <string name="session_routine_item_amrap_routine_title_text">AMRAP</string>

    <string name="session_routine_item_warmup_routine_title_text_format">Warm Up #%1$d</string>

    <string name="session_routine_item_deload_routine_title_text_format">Deload #%1$d</string>

    <string name="session_routine_item_warmup_and_deload_routine_info_text_format">%1$d%4$s x %2$d (%3$s%% x %2$d)</string> <!-- Usage : 120kg x 5 (60% x 5) -->

    <string name="session_routine_item_amrap_routine_info_text_format">%1$d%4$s x %2$d+ (%3$s%% x %2$d+)</string> <!-- Usage : 120kg x 5+ (60% x 5+) -->
    <string name="session_routine_item_amrap_routine_rep_indicator_text_format">More than %1$d reps</string>

    <string name="session_record_amrap_plus_reps_button_content_description">This is plus-reps button.</string>
    <string name="session_record_amrap_minus_reps_button_content_description">This is minus-reps button.</string>

    <string name="session_routine_collapsing_toolbar_title_text_format">W%1$dD%2$d (%3$s)</string> <!-- Usage : W3D1 (BP) -->

    <string name="session_footer_button_text_record">Submit</string>
    <string name="session_footer_button_text_preview">Start</string>

    <string name="overall_empty_session_list_title_text">Nothing to show!!</string>
    <string name="overall_empty_session_list_message_text">If you complete a session,\nthe records for that session\nwill be displayed here.</string>
    <string name="overall_empty_session_icon_content_description">Nothing to show</string>

    <string name="statistic_user_training_max_tm_weights_text_format">%1$d%2$s</string> <!-- Usage : 120 kg or 120 lbs -->
    <string name="statistic_user_training_max_base_record_text_format">Base record : %1$s %3$s x %2$d</string> <!-- Usage : 120 kg x 5 or 120 lbs x 5 -->
    <string name="bottom_nav_menu_item_settings_title">Settings</string>
</resources>