<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.header.HeaderFragment">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/onboarding_title_image_content_description"
        app:srcCompat="@drawable/ic_onboarding_header"
        app:tint="?attr/colorPrimaryVariant"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline"
        app:layout_constraintTop_toTopOf="@id/top_guideline"/>

    <TextView
        android:id="@+id/onboarding_header_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_dp_default"
        android:text="@string/onboarding_header_title"
        android:textAppearance="@style/TextAppearance.App.Headline1"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline"
        app:layout_constraintBottom_toTopOf="@id/onboarding_header_subtitle" />

    <TextView
        android:id="@+id/onboarding_header_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_dp_extreme_large"
        android:text="@string/onboarding_header_sub_title"
        android:textAppearance="@style/TextAppearance.App.Headline3"
        app:layout_constraintTop_toBottomOf="@id/onboarding_header_title"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline" />

    <Button
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_header_start_button_text"
        android:textAppearance="@style/TextAppearance.App.Headline3"
        app:icon="@drawable/ic_start_method_24"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guideline_margin_dp_extreme_large" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guideline_margin_dp_extreme_large" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/guideline_margin_dp_extreme_large" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/guideline_margin_dp_extreme_large" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />
</androidx.constraintlayout.widget.ConstraintLayout>