<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="kr.valor.juggernaut.ui.settings.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.settings.SettingsFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_bar_title_settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/content_top_guideline"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            style="@style/Widget.App.Button.TextButton.SharpButton"
            android:id="@+id/settings_select_theme_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:padding="@dimen/padding_dp_default"
            android:text="@string/settings_select_theme_title"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnSurface"
            android:onClick="@{() -> viewModel.onClickChooseTheme()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/content_top_guideline" />

        <Button
            style="@style/Widget.App.Button.TextButton.SharpButton"
            android:id="@+id/settings_stop_method_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/settings_halt_method_button_text"
            android:textColor="?attr/colorError"
            android:gravity="start"
            android:padding="@dimen/padding_dp_default"
            app:icon="@drawable/ic_halt_method_24"
            app:iconTint="?attr/colorError"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_select_theme_button"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/content_top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="?attr/actionBarSize" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_dp_default" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_dp_default" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/margin_dp_default" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>