<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.overall.OverallFragment">

    <data>
        <variable
            name="viewModel"
            type="kr.valor.juggernaut.ui.overall.OverallViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <kr.valor.juggernaut.ui.NoElevationAppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:background="?attr/colorSurface">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:background="?attr/colorSurface"
                app:titleEnabled="false"
                app:contentScrim="?attr/colorSurface"
                app:statusBarScrim="?attr/colorSurface"
                app:layout_scrollFlags="scroll|snap">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </kr.valor.juggernaut.ui.NoElevationAppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/user_completed_session_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/recyclerview_container_padding_horizontal_default"
            android:paddingVertical="@dimen/recyclerview_container_padding_vertical_default"
            android:clipToPadding="false"
            app:overallSessions="@{viewModel.uiState}"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_session_achievement_info"
            tools:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/empty_session_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:visibility="gone"
            app:emptySession="@{viewModel.uiState}"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/empty_session_icon"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/overall_empty_session_icon_content_description"
                app:srcCompat="@drawable/ic_empty_default"
                app:tint="?attr/colorPrimaryVariant"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toTopOf="@id/top_guideline"
                app:layout_constraintEnd_toEndOf="@id/end_guideline" />

            <TextView
                android:id="@+id/empty_session_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_dp_extreme_large"
                android:textAppearance="@style/TextAppearance.App.Headline2"
                android:text="@string/overall_empty_session_list_title_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/vertical_guideline" />

            <TextView
                android:id="@+id/empty_session_message_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.App.Content"
                android:layout_marginTop="@dimen/margin_dp_extreme_large"
                android:text="@string/overall_empty_session_list_message_text"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="@id/empty_session_title_text"
                app:layout_constraintEnd_toEndOf="@id/empty_session_title_text"
                app:layout_constraintTop_toBottomOf="@id/empty_session_title_text" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertical_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.6" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/margin_dp_extreme_large" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/margin_dp_extreme_large" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/top_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/margin_dp_extreme_large" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>